--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
-    "hono": "^4.7.10",
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "zod": "^3.25.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
